cluster/platform/backup-dashboard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: backup-dashboard
  name: backup-dashboard
spec:
  selector:
    app.kubernetes.io/name: backup-dashboard
  ports:
  - name: http
    port: 8080
    targetPort: 8080
